--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Kazakhmys</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header class="flex column">
@@ -87,79 +87,136 @@
                 </div>
                 <div class="selectable">
                     <div class="selected">
-                        <span>О колледже</span>
+                        <span>Абитуриенту</span>
                         <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M5.00017 6.20834C4.87953 6.20904 4.75994 6.18591 4.64826 6.1403C4.53657 6.09468 4.43499 6.02746 4.34934 5.94251L0.68267 2.27584C0.597201 2.19037 0.529404 2.08891 0.483149 1.97724C0.436894 1.86557 0.413086 1.74588 0.413086 1.62501C0.413086 1.50414 0.436894 1.38445 0.483149 1.27278C0.529404 1.16111 0.597201 1.05964 0.68267 0.974173C0.768139 0.888705 0.869605 0.820907 0.981275 0.774652C1.09295 0.728397 1.21263 0.70459 1.3335 0.70459C1.45437 0.70459 1.57406 0.728397 1.68573 0.774652C1.7974 0.820907 1.89887 0.888705 1.98434 0.974173L5.00017 4.00834L8.02517 1.09334C8.1095 0.999575 8.21226 0.924217 8.32704 0.871979C8.44182 0.819742 8.56614 0.79175 8.69223 0.789752C8.81832 0.787754 8.94347 0.811794 9.05984 0.860369C9.17622 0.908944 9.28132 0.98101 9.36857 1.07206C9.45583 1.1631 9.52336 1.27118 9.56694 1.38951C9.61052 1.50785 9.62921 1.6339 9.62186 1.7598C9.6145 1.88569 9.58124 2.00871 9.52417 2.12116C9.4671 2.23361 9.38744 2.33308 9.29017 2.41334L5.6235 5.95167C5.45587 6.1133 5.23301 6.20506 5.00017 6.20834Z" fill="#262729"/>
                         </svg>
                     </div>
                     <div class="options-holder">
                         <div class="options">
-                            <a href="#" class="header-bottom-option">Руководство колледжа</a>
-                            <a href="#" class="header-bottom-option">Колледж в рейтингах</a> 
-                            <a href="#" class="header-bottom-option">Противодействие коррупции</a> 
-                            <a href="#" class="header-bottom-option">СМИ о нас</a> 
-                            <a href="#" class="header-bottom-option">Отзывы</a> 
-                            <a href="#" class="header-bottom-option">Контакты</a> 
+                            <a href="#" class="header-bottom-option">Правила приема</a>
+                            <a href="#" class="header-bottom-option">Специальности</a> 
+                            <a href="#" class="header-bottom-option">Наши реквизиты</a> 
+                            <a href="#" class="header-bottom-option">Перечень документов</a> 
                         </div>
                     </div>
                 </div>
                 <div class="selectable">
                     <div class="selected">
-                        <span>О колледже</span>
+                        <span>Студенту</span>
                         <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M5.00017 6.20834C4.87953 6.20904 4.75994 6.18591 4.64826 6.1403C4.53657 6.09468 4.43499 6.02746 4.34934 5.94251L0.68267 2.27584C0.597201 2.19037 0.529404 2.08891 0.483149 1.97724C0.436894 1.86557 0.413086 1.74588 0.413086 1.62501C0.413086 1.50414 0.436894 1.38445 0.483149 1.27278C0.529404 1.16111 0.597201 1.05964 0.68267 0.974173C0.768139 0.888705 0.869605 0.820907 0.981275 0.774652C1.09295 0.728397 1.21263 0.70459 1.3335 0.70459C1.45437 0.70459 1.57406 0.728397 1.68573 0.774652C1.7974 0.820907 1.89887 0.888705 1.98434 0.974173L5.00017 4.00834L8.02517 1.09334C8.1095 0.999575 8.21226 0.924217 8.32704 0.871979C8.44182 0.819742 8.56614 0.79175 8.69223 0.789752C8.81832 0.787754 8.94347 0.811794 9.05984 0.860369C9.17622 0.908944 9.28132 0.98101 9.36857 1.07206C9.45583 1.1631 9.52336 1.27118 9.56694 1.38951C9.61052 1.50785 9.62921 1.6339 9.62186 1.7598C9.6145 1.88569 9.58124 2.00871 9.52417 2.12116C9.4671 2.23361 9.38744 2.33308 9.29017 2.41334L5.6235 5.95167C5.45587 6.1133 5.23301 6.20506 5.00017 6.20834Z" fill="#262729"/>
                         </svg>
                     </div>
                     <div class="options-holder">
-                        <div class="options">
-                            <a href="#" class="header-bottom-option">Руководство колледжа</a>
-                            <a href="#" class="header-bottom-option">Колледж в рейтингах</a> 
-                            <a href="#" class="header-bottom-option">Противодействие коррупции</a> 
-                            <a href="#" class="header-bottom-option">СМИ о нас</a> 
-                            <a href="#" class="header-bottom-option">Отзывы</a> 
-                            <a href="#" class="header-bottom-option">Контакты</a> 
+                        <div class="options flex g20">
+                            <div class="forStudent">
+                                <a href="#" class="header-bottom-option">Студенческий парламент колледжа</a>
+                                <a href="#" class="header-bottom-option">Портал дистанционного обучения</a> 
+                                <a href="#" class="header-bottom-option">Правила внутреннего распорядка</a> 
+                                <a href="#" class="header-bottom-option">Расписание</a> 
+                                <a href="#" class="header-bottom-option">Спортивные секции</a> 
+                                <a href="#" class="header-bottom-option">Социально-психологическая помощь</a> 
+                            </div>
+                            <div class="forStudent">
+                                <a href="#" class="header-bottom-option">Мед.пункт</a> 
+                                <a href="#" class="header-bottom-option">Библиотека</a> 
+                                <a href="#" class="header-bottom-option">График учебного процесса</a> 
+                                <a href="#" class="header-bottom-option">Аттестация</a> 
+                                <a href="#" class="header-bottom-option">Кружки</a> 
+                                <a href="#" class="header-bottom-option">Получение рабочей <br> профессии</a> 
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="selectable">
                     <div class="selected">
-                        <span>О колледже</span>
+                        <span>Трудоустройство</span>
                         <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M5.00017 6.20834C4.87953 6.20904 4.75994 6.18591 4.64826 6.1403C4.53657 6.09468 4.43499 6.02746 4.34934 5.94251L0.68267 2.27584C0.597201 2.19037 0.529404 2.08891 0.483149 1.97724C0.436894 1.86557 0.413086 1.74588 0.413086 1.62501C0.413086 1.50414 0.436894 1.38445 0.483149 1.27278C0.529404 1.16111 0.597201 1.05964 0.68267 0.974173C0.768139 0.888705 0.869605 0.820907 0.981275 0.774652C1.09295 0.728397 1.21263 0.70459 1.3335 0.70459C1.45437 0.70459 1.57406 0.728397 1.68573 0.774652C1.7974 0.820907 1.89887 0.888705 1.98434 0.974173L5.00017 4.00834L8.02517 1.09334C8.1095 0.999575 8.21226 0.924217 8.32704 0.871979C8.44182 0.819742 8.56614 0.79175 8.69223 0.789752C8.81832 0.787754 8.94347 0.811794 9.05984 0.860369C9.17622 0.908944 9.28132 0.98101 9.36857 1.07206C9.45583 1.1631 9.52336 1.27118 9.56694 1.38951C9.61052 1.50785 9.62921 1.6339 9.62186 1.7598C9.6145 1.88569 9.58124 2.00871 9.52417 2.12116C9.4671 2.23361 9.38744 2.33308 9.29017 2.41334L5.6235 5.95167C5.45587 6.1133 5.23301 6.20506 5.00017 6.20834Z" fill="#262729"/>
                         </svg>
                     </div>
                     <div class="options-holder">
                         <div class="options">
-                            <a href="#" class="header-bottom-option">Руководство колледжа</a>
-                            <a href="#" class="header-bottom-option">Колледж в рейтингах</a> 
-                            <a href="#" class="header-bottom-option">Противодействие коррупции</a> 
-                            <a href="#" class="header-bottom-option">СМИ о нас</a> 
-                            <a href="#" class="header-bottom-option">Отзывы</a> 
-                            <a href="#" class="header-bottom-option">Контакты</a> 
+                            <a href="#" class="header-bottom-option">Наши выпускники</a>
+                            <a href="#" class="header-bottom-option">Практика</a> 
+                            <a href="#" class="header-bottom-option">Вакансии</a> 
                         </div>
                     </div>
                 </div>
                 <div class="selectable">
                     <div class="selected">
-                        <span>О колледже</span>
+                        <span>Обучение</span>
                         <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M5.00017 6.20834C4.87953 6.20904 4.75994 6.18591 4.64826 6.1403C4.53657 6.09468 4.43499 6.02746 4.34934 5.94251L0.68267 2.27584C0.597201 2.19037 0.529404 2.08891 0.483149 1.97724C0.436894 1.86557 0.413086 1.74588 0.413086 1.62501C0.413086 1.50414 0.436894 1.38445 0.483149 1.27278C0.529404 1.16111 0.597201 1.05964 0.68267 0.974173C0.768139 0.888705 0.869605 0.820907 0.981275 0.774652C1.09295 0.728397 1.21263 0.70459 1.3335 0.70459C1.45437 0.70459 1.57406 0.728397 1.68573 0.774652C1.7974 0.820907 1.89887 0.888705 1.98434 0.974173L5.00017 4.00834L8.02517 1.09334C8.1095 0.999575 8.21226 0.924217 8.32704 0.871979C8.44182 0.819742 8.56614 0.79175 8.69223 0.789752C8.81832 0.787754 8.94347 0.811794 9.05984 0.860369C9.17622 0.908944 9.28132 0.98101 9.36857 1.07206C9.45583 1.1631 9.52336 1.27118 9.56694 1.38951C9.61052 1.50785 9.62921 1.6339 9.62186 1.7598C9.6145 1.88569 9.58124 2.00871 9.52417 2.12116C9.4671 2.23361 9.38744 2.33308 9.29017 2.41334L5.6235 5.95167C5.45587 6.1133 5.23301 6.20506 5.00017 6.20834Z" fill="#262729"/>
                         </svg>
                     </div>
                     <div class="options-holder">
                         <div class="options">
-                            <a href="#" class="header-bottom-option">Руководство колледжа</a>
-                            <a href="#" class="header-bottom-option">Колледж в рейтингах</a> 
-                            <a href="#" class="header-bottom-option">Противодействие коррупции</a> 
-                            <a href="#" class="header-bottom-option">СМИ о нас</a> 
-                            <a href="#" class="header-bottom-option">Отзывы</a> 
-                            <a href="#" class="header-bottom-option">Контакты</a> 
+                            <a href="#" class="header-bottom-option">Дистанционное обучение</a>
+                            <a href="#" class="header-bottom-option">Дуальное обучение</a> 
+                            <a href="#" class="header-bottom-option">Заочное обучение</a> 
+                            <a href="#" class="header-bottom-option">Лицензия</a> 
                         </div>
+                    </div>
+                </div>
+                <a href="" class="just-link">Блог Директора</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="hero g40">
+            <div class="fs-700">
+                ЧУ «Политехнический колледж <br> корпорации «Казахмыс»
+            </div>
+            <button class="button">
+                <span>Узнать подробнее</span>
+                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9.50044 1.2875C9.50044 1.08859 9.42143 0.897822 9.28077 0.75717C9.14012 0.616518 8.94936 0.5375 8.75044 0.5375L2.75044 0.5C2.55153 0.5 2.36076 0.579018 2.22011 0.71967C2.07946 0.860322 2.00044 1.05109 2.00044 1.25C2.00044 1.44891 2.07946 1.63968 2.22011 1.78033C2.36076 1.92098 2.55153 2 2.75044 2H6.92044L0.717942 8.2175C0.647646 8.28722 0.591851 8.37017 0.553774 8.46157C0.515698 8.55296 0.496094 8.65099 0.496094 8.75C0.496094 8.84901 0.515698 8.94704 0.553774 9.03843C0.591851 9.12983 0.647646 9.21278 0.717942 9.2825C0.787665 9.3528 0.870615 9.40859 0.96201 9.44667C1.0534 9.48475 1.15143 9.50435 1.25044 9.50435C1.34945 9.50435 1.44748 9.48475 1.53888 9.44667C1.63027 9.40859 1.71322 9.3528 1.78294 9.2825L8.00044 3.065V7.25C8.00044 7.44891 8.07946 7.63968 8.22011 7.78033C8.36076 7.92098 8.55153 8 8.75044 8C8.94936 8 9.14012 7.92098 9.28077 7.78033C9.42143 7.63968 9.50044 7.44891 9.50044 7.25V1.2875Z" fill="#262729"/>
+                </svg>                    
+            </button>
+        </div>
+        <div class="quickActions flex wrap g20">
+            <a href="#" class="action">
+                Абитуриенту
+            </a>
+            <a href="#" class="action">
+                Достижения <br> преподавателей
+            </a>
+            <a href="#" class="action">
+                Достижения <br> студентов
+            </a>
+        </div>
+
+        <div class="news">
+            <div class="flex spb">
+                <div class="fs-500">Последние новости</div>
+                <a href="" class="link">
+                    <span>
+                        Смотреть на все новости
+                    </span>
+                    <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M9.50044 1.2875C9.50044 1.08859 9.42143 0.897822 9.28077 0.75717C9.14012 0.616518 8.94936 0.5375 8.75044 0.5375L2.75044 0.5C2.55153 0.5 2.36076 0.579018 2.22011 0.71967C2.07946 0.860322 2.00044 1.05109 2.00044 1.25C2.00044 1.44891 2.07946 1.63968 2.22011 1.78033C2.36076 1.92098 2.55153 2 2.75044 2H6.92044L0.717942 8.2175C0.647646 8.28722 0.591851 8.37017 0.553774 8.46157C0.515698 8.55296 0.496094 8.65099 0.496094 8.75C0.496094 8.84901 0.515698 8.94704 0.553774 9.03843C0.591851 9.12983 0.647646 9.21278 0.717942 9.2825C0.787665 9.3528 0.870615 9.40859 0.96201 9.44667C1.0534 9.48475 1.15143 9.50435 1.25044 9.50435C1.34945 9.50435 1.44748 9.48475 1.53888 9.44667C1.63027 9.40859 1.71322 9.3528 1.78294 9.2825L8.00044 3.065V7.25C8.00044 7.44891 8.07946 7.63968 8.22011 7.78033C8.36076 7.92098 8.55153 8 8.75044 8C8.94936 8 9.14012 7.92098 9.28077 7.78033C9.42143 7.63968 9.50044 7.44891 9.50044 7.25V1.2875Z" fill="#262729"/>
+                    </svg>
+                </a>
+            </div>
+            <div class="flex spb news-block-wrapper">
+                <div class="news-block">
+                    <img src="/assests/images/mainPage/news1.jpg" alt="news">
+                    <div class="info-block">
+                        <span class="date">15.11.2022</span>
+                        <span class="descr">Студентки  ПТК «Казахмыс», группы МЦМ-21-9 Болаткан Нурай и Болатова Әдемі, под руководством  Садырбаевой Разии Турсуновны</span>
+                        <span class="flex link primary">
+                            <span>Читать далее</span>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9.50044 1.2875C9.50044 1.08859 9.42143 0.897822 9.28077 0.75717C9.14012 0.616518 8.94936 0.5375 8.75044 0.5375L2.75044 0.5C2.55153 0.5 2.36076 0.579018 2.22011 0.71967C2.07946 0.860322 2.00044 1.05109 2.00044 1.25C2.00044 1.44891 2.07946 1.63968 2.22011 1.78033C2.36076 1.92098 2.55153 2 2.75044 2H6.92044L0.717942 8.2175C0.647646 8.28722 0.591851 8.37017 0.553774 8.46157C0.515698 8.55296 0.496094 8.65099 0.496094 8.75C0.496094 8.84901 0.515698 8.94704 0.553774 9.03843C0.591851 9.12983 0.647646 9.21278 0.717942 9.2825C0.787665 9.3528 0.870615 9.40859 0.96201 9.44667C1.0534 9.48475 1.15143 9.50435 1.25044 9.50435C1.34945 9.50435 1.44748 9.48475 1.53888 9.44667C1.63027 9.40859 1.71322 9.3528 1.78294 9.2825L8.00044 3.065V7.25C8.00044 7.44891 8.07946 7.63968 8.22011 7.78033C8.36076 7.92098 8.55153 8 8.75044 8C8.94936 8 9.14012 7.92098 9.28077 7.78033C9.42143 7.63968 9.50044 7.44891 9.50044 7.25V1.2875Z" fill="#385CAD"/>
+                            </svg>
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+    </main>
     <script src="/js/app.js"></script>
 </body>
 </html>
