--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 </head>
 <body>
     <header class="flex column">
-        <div class="header-top">
-            <div class="flex g10">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M8.00033 1.33325C6.59503 1.33318 5.2465 1.88776 4.24782 2.87645C3.24915 3.86513 2.68105 5.20803 2.66699 6.61325C2.66699 10.2666 7.36699 14.3333 7.56699 14.5066C7.68775 14.6099 7.84142 14.6666 8.00033 14.6666C8.15923 14.6666 8.3129 14.6099 8.43366 14.5066C8.66699 14.3333 13.3337 10.2666 13.3337 6.61325C13.3196 5.20803 12.7515 3.86513 11.7528 2.87645C10.7542 1.88776 9.40562 1.33318 8.00033 1.33325ZM8.00033 13.0999C6.88699 12.0399 4.00033 9.09992 4.00033 6.61325C4.00033 5.55239 4.42175 4.53497 5.1719 3.78482C5.92204 3.03468 6.93946 2.61325 8.00033 2.61325C9.06119 2.61325 10.0786 3.03468 10.8288 3.78482C11.5789 4.53497 12.0003 5.55239 12.0003 6.61325C12.0003 9.07992 9.11366 12.0399 8.00033 13.0999Z" fill="white"/>
-                    <path d="M8.00033 4C7.53884 4 7.08771 4.13685 6.704 4.39324C6.32028 4.64963 6.02121 5.01404 5.84461 5.44041C5.668 5.86677 5.6218 6.33592 5.71183 6.78854C5.80186 7.24117 6.02409 7.65693 6.35041 7.98325C6.67673 8.30957 7.09249 8.5318 7.54512 8.62183C7.99774 8.71186 8.46689 8.66566 8.89325 8.48905C9.31962 8.31245 9.68403 8.01338 9.94042 7.62966C10.1968 7.24595 10.3337 6.79482 10.3337 6.33333C10.3337 5.71449 10.0878 5.121 9.65024 4.68342C9.21266 4.24583 8.61917 4 8.00033 4ZM8.00033 7.33333C7.80255 7.33333 7.60921 7.27468 7.44476 7.1648C7.28031 7.05492 7.15213 6.89874 7.07645 6.71602C7.00076 6.53329 6.98096 6.33222 7.01954 6.13824C7.05813 5.94426 7.15337 5.76608 7.29322 5.62623C7.43307 5.48637 7.61126 5.39113 7.80524 5.35255C7.99922 5.31396 8.20028 5.33377 8.38301 5.40945C8.56574 5.48514 8.72192 5.61331 8.8318 5.77776C8.94168 5.94221 9.00033 6.13555 9.00033 6.33333C9.00033 6.59855 8.89497 6.8529 8.70743 7.04044C8.5199 7.22798 8.26554 7.33333 8.00033 7.33333Z" fill="white"/>
-                </svg>
-                <span>
-                    РК, Карагандинская область, г. Балхаш, ул. Абая, 36
-                </span>
-            </div> 
-            <div class="flex g20">
-                <a href="">Педагогический состав</a>
-                <a href="">Проекты</a>
-                <a href="">Подразделения</a>
+        <div class="header-top-wrapper">
+            <div class="header-top">
+                <div class="flex g10">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.00033 1.33325C6.59503 1.33318 5.2465 1.88776 4.24782 2.87645C3.24915 3.86513 2.68105 5.20803 2.66699 6.61325C2.66699 10.2666 7.36699 14.3333 7.56699 14.5066C7.68775 14.6099 7.84142 14.6666 8.00033 14.6666C8.15923 14.6666 8.3129 14.6099 8.43366 14.5066C8.66699 14.3333 13.3337 10.2666 13.3337 6.61325C13.3196 5.20803 12.7515 3.86513 11.7528 2.87645C10.7542 1.88776 9.40562 1.33318 8.00033 1.33325ZM8.00033 13.0999C6.88699 12.0399 4.00033 9.09992 4.00033 6.61325C4.00033 5.55239 4.42175 4.53497 5.1719 3.78482C5.92204 3.03468 6.93946 2.61325 8.00033 2.61325C9.06119 2.61325 10.0786 3.03468 10.8288 3.78482C11.5789 4.53497 12.0003 5.55239 12.0003 6.61325C12.0003 9.07992 9.11366 12.0399 8.00033 13.0999Z" fill="white"/>
+                        <path d="M8.00033 4C7.53884 4 7.08771 4.13685 6.704 4.39324C6.32028 4.64963 6.02121 5.01404 5.84461 5.44041C5.668 5.86677 5.6218 6.33592 5.71183 6.78854C5.80186 7.24117 6.02409 7.65693 6.35041 7.98325C6.67673 8.30957 7.09249 8.5318 7.54512 8.62183C7.99774 8.71186 8.46689 8.66566 8.89325 8.48905C9.31962 8.31245 9.68403 8.01338 9.94042 7.62966C10.1968 7.24595 10.3337 6.79482 10.3337 6.33333C10.3337 5.71449 10.0878 5.121 9.65024 4.68342C9.21266 4.24583 8.61917 4 8.00033 4ZM8.00033 7.33333C7.80255 7.33333 7.60921 7.27468 7.44476 7.1648C7.28031 7.05492 7.15213 6.89874 7.07645 6.71602C7.00076 6.53329 6.98096 6.33222 7.01954 6.13824C7.05813 5.94426 7.15337 5.76608 7.29322 5.62623C7.43307 5.48637 7.61126 5.39113 7.80524 5.35255C7.99922 5.31396 8.20028 5.33377 8.38301 5.40945C8.56574 5.48514 8.72192 5.61331 8.8318 5.77776C8.94168 5.94221 9.00033 6.13555 9.00033 6.33333C9.00033 6.59855 8.89497 6.8529 8.70743 7.04044C8.5199 7.22798 8.26554 7.33333 8.00033 7.33333Z" fill="white"/>
+                    </svg>
+                    <span>
+                        РК, Карагандинская область, г. Балхаш, ул. Абая, 36
+                    </span>
+                </div> 
+                <div class="flex g20">
+                    <a href="">Педагогический состав</a>
+                    <a href="">Проекты</a>
+                    <a href="">Подразделения</a>
+                </div>
             </div>
         </div>
         <div class="header-middle">
@@ -188,7 +190,7 @@
             </a>
         </div>
 
-        <div class="news">
+        <div class="news container">
             <div class="flex spb">
                 <div class="fs-500">Последние новости</div>
                 <a href="" class="link">
@@ -200,12 +202,38 @@
                     </svg>
                 </a>
             </div>
-            <div class="flex spb news-block-wrapper">
+            <div class="news-block-wrapper">
                 <div class="news-block">
                     <img src="/assests/images/mainPage/news1.jpg" alt="news">
                     <div class="info-block">
                         <span class="date">15.11.2022</span>
                         <span class="descr">Студентки  ПТК «Казахмыс», группы МЦМ-21-9 Болаткан Нурай и Болатова Әдемі, под руководством  Садырбаевой Разии Турсуновны</span>
+                        <span class="flex link primary">
+                            <span>Читать далее</span>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9.50044 1.2875C9.50044 1.08859 9.42143 0.897822 9.28077 0.75717C9.14012 0.616518 8.94936 0.5375 8.75044 0.5375L2.75044 0.5C2.55153 0.5 2.36076 0.579018 2.22011 0.71967C2.07946 0.860322 2.00044 1.05109 2.00044 1.25C2.00044 1.44891 2.07946 1.63968 2.22011 1.78033C2.36076 1.92098 2.55153 2 2.75044 2H6.92044L0.717942 8.2175C0.647646 8.28722 0.591851 8.37017 0.553774 8.46157C0.515698 8.55296 0.496094 8.65099 0.496094 8.75C0.496094 8.84901 0.515698 8.94704 0.553774 9.03843C0.591851 9.12983 0.647646 9.21278 0.717942 9.2825C0.787665 9.3528 0.870615 9.40859 0.96201 9.44667C1.0534 9.48475 1.15143 9.50435 1.25044 9.50435C1.34945 9.50435 1.44748 9.48475 1.53888 9.44667C1.63027 9.40859 1.71322 9.3528 1.78294 9.2825L8.00044 3.065V7.25C8.00044 7.44891 8.07946 7.63968 8.22011 7.78033C8.36076 7.92098 8.55153 8 8.75044 8C8.94936 8 9.14012 7.92098 9.28077 7.78033C9.42143 7.63968 9.50044 7.44891 9.50044 7.25V1.2875Z" fill="#385CAD"/>
+                            </svg>
+                        </span>
+                    </div>
+                </div>
+                <div class="news-block">
+                    <img src="/assests/images/mainPage/news2.jpg" alt="news">
+                    <div class="info-block">
+                        <span class="date">15.11.2022</span>
+                        <span class="descr">В КГКП «Усть-Каменогорский высший политехнический колледж» прошел второй этап II-го республиканского конкурса профессионального мастерства </span>
+                        <span class="flex link primary">
+                            <span>Читать далее</span>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9.50044 1.2875C9.50044 1.08859 9.42143 0.897822 9.28077 0.75717C9.14012 0.616518 8.94936 0.5375 8.75044 0.5375L2.75044 0.5C2.55153 0.5 2.36076 0.579018 2.22011 0.71967C2.07946 0.860322 2.00044 1.05109 2.00044 1.25C2.00044 1.44891 2.07946 1.63968 2.22011 1.78033C2.36076 1.92098 2.55153 2 2.75044 2H6.92044L0.717942 8.2175C0.647646 8.28722 0.591851 8.37017 0.553774 8.46157C0.515698 8.55296 0.496094 8.65099 0.496094 8.75C0.496094 8.84901 0.515698 8.94704 0.553774 9.03843C0.591851 9.12983 0.647646 9.21278 0.717942 9.2825C0.787665 9.3528 0.870615 9.40859 0.96201 9.44667C1.0534 9.48475 1.15143 9.50435 1.25044 9.50435C1.34945 9.50435 1.44748 9.48475 1.53888 9.44667C1.63027 9.40859 1.71322 9.3528 1.78294 9.2825L8.00044 3.065V7.25C8.00044 7.44891 8.07946 7.63968 8.22011 7.78033C8.36076 7.92098 8.55153 8 8.75044 8C8.94936 8 9.14012 7.92098 9.28077 7.78033C9.42143 7.63968 9.50044 7.44891 9.50044 7.25V1.2875Z" fill="#385CAD"/>
+                            </svg>
+                        </span>
+                    </div>
+                </div>
+                <div class="news-block">
+                    <img src="/assests/images/mainPage/news3.jpg" alt="news">
+                    <div class="info-block">
+                        <span class="date">15.11.2022</span>
+                        <span class="descr">Началась областная неделя финансовой грамотности, организованная  учебно-методическим центром развития образования Карагандинской области</span>
                         <span class="flex link primary">
                             <span>Читать далее</span>
                             <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
