--- a/index.html
+++ b/index.html
@@ -256,6 +256,14 @@
                 </div>
             </div>
         </div>
+        <div class="director-block-wrapper">
+            <div class="director-block">
+                <div class="flex">
+                    <img src="/assests/images/mainPage/director.jpeg" alt="Директор">
+    
+                </div>
+            </div>
+        </div>
     </main>
     <script src="/js/app.js"></script>
 </body>
