--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assests/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+
     <title>Kazakhmys</title>
 
     <link rel="stylesheet" href="css/main.css">
@@ -270,7 +277,7 @@
                         <div class="text">
                             Я рада приветствовать Вас и нашей возможности общения посредством блога директора. Надеюсь, что этот интерактивный ресурс станет не только хорошей площадкой для широкого спектра обсуждения всех вопросов, проблем, связанных с деятельностью колледжа, но и даст возможность получить ответы на все интересующие Вас вопросы, возможность внести предложения по улучшению работы колледжа, оставить комментарии. Я всегда открыта для конструктивного диалога со студентами, родителями, выпускниками, партнерами и теми, кто только собирается поступать в наш колледж.
                         </div>
-                        <a href="" class="link">
+                        <a href="" class="link primary">
                             <span>
                                 Подробнее
                             </span>
@@ -285,7 +292,7 @@
         <div class="instagram-block container">
             <div class="flex spb">
                 <div class="block-title">Подписывайтесь на наш инстаграм</div>
-                <a href="" class="link">
+                <a href="https://www.instagram.com/ptk.balkhash/" target="_blank" class="link">
                     <span>
                         Перейти в инстаграм
                     </span>
@@ -294,8 +301,182 @@
                     </svg>
                 </a>
             </div>
+            <div class="flex wrap insta-blocks">
+                <a href="https://www.instagram.com/p/Ckpf8CnjPcm/" target="_blank" class="block">
+                    <img src="/assests/images/mainPage/insta1.jpg" alt="Instagram">
+                </a>
+                <a href="https://www.instagram.com/p/Cki_u7goKeH/" target="_blank" class="block">
+                    <img src="/assests/images/mainPage/insta2.jpg" alt="Instagram">
+                </a>
+                <a href="https://www.instagram.com/p/CkaP9UPj7LB/" target="_blank" class="block">
+                    <img src="/assests/images/mainPage/insta3.jpg" alt="Instagram">
+                </a>
+                <a href="https://www.instagram.com/p/CkNGwT1ot-M/" target="_blank" class="block">
+                    <img src="/assests/images/mainPage/insta4.jpg" alt="Instagram">
+                </a>
+                <a href="https://www.instagram.com/p/ClGHRTEIruA/" target="_blank" class="block">
+                    <img src="/assests/images/mainPage/insta5.jpg" alt="Instagram">
+                </a>
+                <a href="https://www.instagram.com/p/CkDspmMomd4/" target="_blank" class="block">
+                    <img src="/assests/images/mainPage/insta6.jpg" alt="Instagram">
+                </a>
+            </div>
+        </div>
+        <div class="partners-blocks container">
+            <div class="flex start">
+                <div class="block-title">Наши партнеры</div>
+            </div>
+            <div class="flex spb wrap partners-block-wrapper">
+                <a href="http://www.kazakhmys.kz/" target="_blank" class="partners-block">
+                    <img src="/assests/images/partners/kazakhmys.png" alt="Kazakhmys">
+                </a>
+                <a href="https://halykbank.kz/" target="_blank" class="partners-block">
+                    <img src="/assests/images/partners/halyk.png" alt="Kazakhmys">
+                </a>
+                <a href="https://www.altynalmas.kz/" target="_blank" class="partners-block">
+                    <img src="/assests/images/partners/altynAlmas.png" alt="Kazakhmys">
+                </a>
+                <a href="https://www.enbek.kz/ru" target="_blank" class="partners-block">
+                    <img src="/assests/images/partners/enbek.png" alt="Kazakhmys">
+                </a>
+                <a href="https://kz.jooble.org/" target="_blank" class="partners-block">
+                    <img src="/assests/images/partners/jooble.png" alt="Kazakhmys">
+                </a>
+                <a href="https://www.kazminerals.com/" target="_blank" class="partners-block">
+                    <img src="/assests/images/partners/kazMinerals.png" alt="Kazakhmys">
+                </a>
+                <a href="https://www.instagram.com/balqash_jumyspen_qamty/?igshid=YmMyMTA2M2Y" target="_blank" class="partners-block">
+                    <img src="/assests/images/partners/kmm.png" alt="Kazakhmys">
+                </a>
+            </div>
+        </div>
+        <div class="container textInTheEnd">
+            <span>
+                Благодаря поддержке наших парнеров ЧУ «Политехнический колледж <br class="dn577"> корпорации «Казахмыс» развивается и идет в ногу со врменем.
+            </span>
         </div>
     </main>
+    <footer class="container">
+        <div class="flex spb ais g40">
+            <div class="logo">
+                <img src="/assests/images/logo-big.png" alt="logo">
+            </div>
+            <div class="flex column start info-wrapper">
+                <div class="flex spb ais footer-contacts wrap">
+                    <div class="contact">
+                        <img src="/assests/icons/phone-yellow.svg" alt="phone">
+                        <span>Приемная:</span>
+                        <a href="tel:87103668407" class="underline-hover">+7 (710) 366-84-07</a>
+                    </div>
+                    <div class="contact">
+                        <img src="/assests/icons/phone-yellow.svg" alt="phone">
+                        <span>Телефон доверия:</span>
+                        <a href="tel:87103668407" class="underline-hover">+7 (710) 366-84-07</a>
+                    </div>
+                    <div class="contact">
+                        <img src="/assests/icons/email-yellow.svg" alt="mail" class="mailIcon">
+                        <a href="mailto:ptk_balhash@mail.ru" class="underline-hover inline mailLink">ptk_balhash@mail.ru</a>
+                    </div>
+                    <div class="contact flex start">
+                        <img src="/assests/icons/location-yellow.svg" alt="Адрес">
+                        <a href="" class="inline">РК, Карагандинская область, <br> г. Балхаш, ул. Абая, 36</a>
+                    </div>
+                </div>
+                <div class="footer-nav wrap flex spb ais">
+                    <div class="flex column start">
+                        <div class="footer-title">
+                            Полезные ресурсы
+                        </div>
+                        <ul>
+                            <li>
+                                <a href="">Электронное правительство Республики казахстан</a>
+                            </li>
+                            <li>
+                                <a href="">Юридические услуги «Әділет»</a>
+                            </li>
+                            <li>
+                                <a href="">Образовательная платформа для студентов</a>
+                            </li>
+                            <li>
+                                <a href="">НАО «Талап»</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex column start">
+                        <div class="footer-title">
+                            Навигация
+                        </div>
+                        <div class="flex wrap start nav-lists">
+                            <ul>
+                                <li>
+                                    <a href="">О колледже</a>
+                                </li>
+                                <li>
+                                    <a href="">Абитуриенту</a>
+                                </li>
+                                <li>
+                                    <a href="">Обучение</a>
+                                </li>
+                                <li>
+                                    <a href="">Педогогический состав</a>
+                                </li>
+                                <li>
+                                    <a href="">Проекты</a>
+                                </li>
+                                <li>
+                                    <a href="">Подразделения</a>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="">Студенту</a>
+                                </li>
+                                <li>
+                                    <a href="">Трудоустройство</a>
+                                </li>
+                                <li>
+                                    <a href="">Навигатор профессий</a>
+                                </li>
+                                <li>
+                                    <a href="">Партнеры</a>
+                                </li>
+                                <li>
+                                    <a href="">Новости</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="socialMedia">
+                    <span>Мы в соц.сетях:</span>
+                    <div class="flex">
+                        <a href="https://t.me/call_ctnterPTK" target="_blank" rel="noopener noreferrer">
+                            <img src="/assests/images/social-media/telegram.png" alt="telegram">
+                        </a>
+                        <a href="https://instagram.com/ptk.balkhash?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer">
+                            <img src="/assests/images/social-media/instagram.png" alt="Instagram">
+                        </a>
+                        <a href="https://www.facebook.com/groups/1737489559799657" target="_blank" rel="noopener noreferrer">
+                            <img src="/assests/images/social-media/facebook.png" alt="facebook">
+                        </a>
+                        <a href="https://vk.com/ptk_kazakhmys" target="_blank" rel="noopener noreferrer">
+                            <img src="/assests/images/social-media/vkontakte.png" alt="VK">
+                        </a>
+                        <a href="https://pkkk.mycollege.kz/ru/main/index" target="_blank" rel="noopener noreferrer">
+                            <img src="/assests/images/social-media/mycollege.png" alt="mycollege">
+                        </a>
+                        <a href="https://www.youtube.com/channel/UCIv-npQZxcmlTQzhGLv2k0w/featured" target="_blank" rel="noopener noreferrer">
+                            <img src="/assests/images/social-media/youtube.png" alt="youtube">
+                        </a>
+                    </div>
+                </div>
+                <div class="terms">
+                    2022 ЧУ «Политехнический колледж корпорации «Казахмыс»
+                </div>
+            </div>
+        </div>
+        <img src="/assests/images/footer-building.png" alt="Здание колледжа" class="footer-building">
+    </footer>
     <script src="/js/app.js"></script>
 </body>
 </html>
