about pages added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assests/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
 
     <title>ЧУ «Политехнический колледж корпорации «Казахмыс»</title>
 
@@ -19,6 +19,7 @@
     <script src="/js/link.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
     <header-component></header-component>
     <main>
@@ -29,8 +30,10 @@
             <button class="button">
                 <span>Узнать подробнее</span>
                 <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M9.50044 1.2875C9.50044 1.08859 9.42143 0.897822 9.28077 0.75717C9.14012 0.616518 8.94936 0.5375 8.75044 0.5375L2.75044 0.5C2.55153 0.5 2.36076 0.579018 2.22011 0.71967C2.07946 0.860322 2.00044 1.05109 2.00044 1.25C2.00044 1.44891 2.07946 1.63968 2.22011 1.78033C2.36076 1.92098 2.55153 2 2.75044 2H6.92044L0.717942 8.2175C0.647646 8.28722 0.591851 8.37017 0.553774 8.46157C0.515698 8.55296 0.496094 8.65099 0.496094 8.75C0.496094 8.84901 0.515698 8.94704 0.553774 9.03843C0.591851 9.12983 0.647646 9.21278 0.717942 9.2825C0.787665 9.3528 0.870615 9.40859 0.96201 9.44667C1.0534 9.48475 1.15143 9.50435 1.25044 9.50435C1.34945 9.50435 1.44748 9.48475 1.53888 9.44667C1.63027 9.40859 1.71322 9.3528 1.78294 9.2825L8.00044 3.065V7.25C8.00044 7.44891 8.07946 7.63968 8.22011 7.78033C8.36076 7.92098 8.55153 8 8.75044 8C8.94936 8 9.14012 7.92098 9.28077 7.78033C9.42143 7.63968 9.50044 7.44891 9.50044 7.25V1.2875Z" fill="#262729"/>
-                </svg>                    
+                    <path
+                        d="M9.50044 1.2875C9.50044 1.08859 9.42143 0.897822 9.28077 0.75717C9.14012 0.616518 8.94936 0.5375 8.75044 0.5375L2.75044 0.5C2.55153 0.5 2.36076 0.579018 2.22011 0.71967C2.07946 0.860322 2.00044 1.05109 2.00044 1.25C2.00044 1.44891 2.07946 1.63968 2.22011 1.78033C2.36076 1.92098 2.55153 2 2.75044 2H6.92044L0.717942 8.2175C0.647646 8.28722 0.591851 8.37017 0.553774 8.46157C0.515698 8.55296 0.496094 8.65099 0.496094 8.75C0.496094 8.84901 0.515698 8.94704 0.553774 9.03843C0.591851 9.12983 0.647646 9.21278 0.717942 9.2825C0.787665 9.3528 0.870615 9.40859 0.96201 9.44667C1.0534 9.48475 1.15143 9.50435 1.25044 9.50435C1.34945 9.50435 1.44748 9.48475 1.53888 9.44667C1.63027 9.40859 1.71322 9.3528 1.78294 9.2825L8.00044 3.065V7.25C8.00044 7.44891 8.07946 7.63968 8.22011 7.78033C8.36076 7.92098 8.55153 8 8.75044 8C8.94936 8 9.14012 7.92098 9.28077 7.78033C9.42143 7.63968 9.50044 7.44891 9.50044 7.25V1.2875Z"
+                        fill="#262729" />
+                </svg>
             </button>
         </div>
         <div class="quickActions flex wrap g20">
@@ -55,7 +58,8 @@
                     <img src="/assests/images/mainPage/news1.jpg" alt="news">
                     <div class="info-block">
                         <span class="date">15.11.2022</span>
-                        <span class="descr">Студентки  ПТК «Казахмыс», группы МЦМ-21-9 Болаткан Нурай и Болатова Әдемі, под руководством  Садырбаевой Разии Турсуновны</span>
+                        <span class="descr">Студентки ПТК «Казахмыс», группы МЦМ-21-9 Болаткан Нурай и Болатова Әдемі,
+                            под руководством Садырбаевой Разии Турсуновны</span>
                         <link-component href="" class="primary" text="Читать далее"></link-component>
                     </div>
                 </div>
@@ -63,7 +67,8 @@
                     <img src="/assests/images/mainPage/news2.jpg" alt="news">
                     <div class="info-block">
                         <span class="date">15.11.2022</span>
-                        <span class="descr">В КГКП «Усть-Каменогорский высший политехнический колледж» прошел второй этап II-го республиканского конкурса профессионального мастерства </span>
+                        <span class="descr">В КГКП «Усть-Каменогорский высший политехнический колледж» прошел второй
+                            этап II-го республиканского конкурса профессионального мастерства </span>
                         <link-component href="" class="primary" text="Читать далее"></link-component>
                     </div>
                 </div>
@@ -71,7 +76,8 @@
                     <img src="/assests/images/mainPage/news3.jpg" alt="news">
                     <div class="info-block">
                         <span class="date">15.11.2022</span>
-                        <span class="descr">Началась областная неделя финансовой грамотности, организованная  учебно-методическим центром развития образования Карагандинской области</span>
+                        <span class="descr">Началась областная неделя финансовой грамотности, организованная
+                            учебно-методическим центром развития образования Карагандинской области</span>
                         <link-component href="" class="primary" text="Читать далее"></link-component>
                     </div>
                 </div>
@@ -89,7 +95,13 @@
                             Уважаемые посетители сайта ЧУ "Политехнический <br> колледж корпорации "Казахмыс"!
                         </div>
                         <div class="text">
-                            Я рада приветствовать Вас и нашей возможности общения посредством блога директора. Надеюсь, что этот интерактивный ресурс станет не только хорошей площадкой для широкого спектра обсуждения всех вопросов, проблем, связанных с деятельностью колледжа, но и даст возможность получить ответы на все интересующие Вас вопросы, возможность внести предложения по улучшению работы колледжа, оставить комментарии. Я всегда открыта для конструктивного диалога со студентами, родителями, выпускниками, партнерами и теми, кто только собирается поступать в наш колледж.
+                            Я рада приветствовать Вас и нашей возможности общения посредством блога директора. Надеюсь,
+                            что этот интерактивный ресурс станет не только хорошей площадкой для широкого спектра
+                            обсуждения всех вопросов, проблем, связанных с деятельностью колледжа, но и даст возможность
+                            получить ответы на все интересующие Вас вопросы, возможность внести предложения по улучшению
+                            работы колледжа, оставить комментарии. Я всегда открыта для конструктивного диалога со
+                            студентами, родителями, выпускниками, партнерами и теми, кто только собирается поступать в
+                            наш колледж.
                         </div>
                         <link-component text="Подробнее" class="primary"></link-component>
                     </div>
@@ -99,7 +111,8 @@
         <div class="instagram-block container">
             <div class="flex spb">
                 <div class="block-title">Подписывайтесь на наш инстаграм</div>
-                <link-component href="https://www.instagram.com/ptk.balkhash/" text="Перейти в инстаграм" class="blank"></link-component>
+                <link-component href="https://www.instagram.com/ptk.balkhash/" text="Перейти в инстаграм" class="blank">
+                </link-component>
             </div>
             <div class="flex wrap insta-blocks">
                 <a href="https://www.instagram.com/p/Ckpf8CnjPcm/" target="_blank" class="block">
@@ -145,14 +158,16 @@
                 <a href="https://www.kazminerals.com/" target="_blank" class="partners-block">
                     <img src="/assests/images/partners/kazMinerals.png" alt="Kazakhmys">
                 </a>
-                <a href="https://www.instagram.com/balqash_jumyspen_qamty/?igshid=YmMyMTA2M2Y" target="_blank" class="partners-block">
+                <a href="https://www.instagram.com/balqash_jumyspen_qamty/?igshid=YmMyMTA2M2Y" target="_blank"
+                    class="partners-block">
                     <img src="/assests/images/partners/kmm.png" alt="Kazakhmys">
                 </a>
             </div>
         </div>
         <div class="container textInTheEnd">
             <span>
-                Благодаря поддержке наших парнеров ЧУ «Политехнический колледж <br class="dn577"> корпорации «Казахмыс» развивается и идет в ногу со врменем.
+                Благодаря поддержке наших парнеров ЧУ «Политехнический колледж <br class="dn577"> корпорации «Казахмыс»
+                развивается и идет в ногу со врменем.
             </span>
         </div>
     </main>
@@ -160,4 +175,5 @@
     <scroll-component></scroll-component>
     <script src="/js/app.js"></script>
 </body>
+
 </html>
