--- a/pages/about/antikor.html
+++ b/pages/about/antikor.html
@@ -105,6 +105,14 @@
           </div>
         </div>
       </div>
+      <div class="club-wrapper">
+        <div class="club">
+          <div class="flex spb container">
+            <div class="block-title">Sanaly Urpaq</div>
+            <div class="primary2">Студенческий клуб</div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer-component></footer-component>
     <scroll-component></scroll-component>
