about college part done

--- a/pages/about/contacts.html
+++ b/pages/about/contacts.html
@@ -25,7 +25,7 @@
       <div class="title">Контакты</div>
       <div class="breadcrumb">
           <a href="/">Главная</a>
-          <a href="/pages/about-college.html">О колледже</a>
+          <a href="/pages/about/index.html">О колледже</a>
           <span>Контакты</span>
       </div>
 
@@ -71,12 +71,24 @@
         <div class="social-media-block">
           <span>Наши социальные сети:</span>
           <div class="flex g10">
-            <img src="/assests/images/social-media-blue/facebook.png" alt="facebook">
-            <img src="/assests/images/social-media-blue/telegram.png" alt="telegram">
-            <img src="/assests/images/social-media-blue/youtube.png" alt="youtube">
-            <img src="/assests/images/social-media-blue/instagram.png" alt="instagram">
-            <img src="/assests/images/social-media-blue/vkontakte.png" alt="vkontakte">
-            <img src="/assests/images/social-media-blue/mycollege.png" alt="mycollege">
+            <a href="https://www.facebook.com/groups/1737489559799657" target="_blank" rel="noopener noreferref">
+              <img src="/assests/images/social-media-blue/facebook.png" alt="facebook">
+            </a>
+            <a href="https://t.me/call_ctnterPTK" target="_blank" rel="noopener noreferref">
+              <img src="/assests/images/social-media-blue/telegram.png" alt="telegram">
+            </a>
+            <a href="https://www.youtube.com/channel/UCIv-npQZxcmlTQzhGLv2k0w/featured" target="_blank" rel="noopener noreferref">
+              <img src="/assests/images/social-media-blue/youtube.png" alt="youtube">
+            </a>
+            <a href="https://instagram.com/ptk.balkhash?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferref">
+              <img src="/assests/images/social-media-blue/instagram.png" alt="instagram">
+            </a>
+            <a href="https://vk.com/ptk_kazakhmys" target="_blank" rel="noopener noreferref">
+              <img src="/assests/images/social-media-blue/vkontakte.png" alt="vkontakte">
+            </a>
+            <a href="https://pkkk.mycollege.kz/ru/main/index" target="_blank" rel="noopener noreferref">
+              <img src="/assests/images/social-media-blue/mycollege.png" alt="mycollege">
+            </a>
           </div>
         </div>
       </div>
