--- a/pages/about/feedback.html
+++ b/pages/about/feedback.html
@@ -25,7 +25,7 @@
             <div class="title">Отзывы</div>
             <div class="breadcrumb">
                 <a href="/">Главная</a>
-                <a href="/pages/about-college.html">О колледже</a>
+                <a href="/pages/about/index.html">О колледже</a>
                 <span>Отзывы</span>
             </div>
         </div>
