--- a/pages/about/smi.html
+++ b/pages/about/smi.html
@@ -27,7 +27,7 @@
         <div class="title">СМИ о нас</div>
         <div class="breadcrumb">
             <a href="/">Главная</a>
-            <a href="/pages/about-college.html">О колледже</a>
+            <a href="/pages/about/index.html">О колледже</a>
             <span>СМИ о нас</span>
         </div>
         <div class="swiper smi smi1">
