--- a/pages/about/management.html
+++ b/pages/about/management.html
@@ -25,7 +25,7 @@
     <div class="title">Руководство колледжа</div>
     <div class="breadcrumb">
       <a href="/">Главная</a>
-      <a href="/pages/about-college.html">О колледже</a>
+      <a href="/pages/about/index.html">О колледже</a>
       <span>Руководство колледжа</span>
     </div>
     <div class="flex column start mY60">
