--- a/pages/about/rating.html
+++ b/pages/about/rating.html
@@ -25,7 +25,7 @@
         <div class="title">Рейтинг</div>
         <div class="breadcrumb">
             <a href="/">Главная</a>
-            <a href="/pages/about-college.html">О колледже</a>
+            <a href="/pages/about/index.html">О колледже</a>
             <span>Рейтинг</span>
         </div>
         <div class="ratings">
