--- a/pages/enrollee/document.html
+++ b/pages/enrollee/document.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assests/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
 
-    <title></title>
+    <title>Перечень документов для поступления</title>
 
     <script src="/js/header.js"></script>
     <script src="/js/footer.js"></script>
