--- a/pages/enrollee/document.html
+++ b/pages/enrollee/document.html
@@ -21,8 +21,45 @@
 
 <body>
     <header-component></header-component>
-    <main class="responsive">
-
+    <main class="container responsive">
+        <div class="title">Перечень документов для поступления</div>
+        <div class="breadcrumb">
+            <a href="/">Главная</a>
+            <a href="/pages/enrolee/index.html">Абитуриенту</a>
+            <span>Перечень документов для поступления</span>
+        </div>
+        <div class="document-list-global-wrapper">
+            <div class="flex spb">
+                <div class="block-title special">
+                    (обновление Правил ожидается в июне 2023г.)
+                </div>
+            </div>
+            <div class="document-list-wrapper">
+                <img src="/assests/images/enrollee/documents.jpg" alt="" class="dn690">
+                <div class="document-list">
+                    <div class="list">
+                        <ol>
+                            <li>Аттестат начальной школы или аттестат средней <br class="dn690"> школы, подлинник</li>
+                            <li>
+                                Медицинская справка по форме № 075-У <br>
+                                с фотографией (должна быть печать <br>
+                                и фото флюорографии, фото визита кабинета № 304 поликлиники № 1)
+                            </li>
+                            <li>Заявление в колледж</li>
+                            <li>Карта вакцинации объекта 063 (9 кл)</li>
+                            <li>Копия удостоверения личности</li>
+                            <li>Копия удостоверения личности родителей</li>
+                            <li>Копия свидетельства о рождении ребенка с ИИН</li>
+                            <li>6 фото размером 3х4</li>
+                            <li>Скоросшиватель, конверт - 1шт и файл - 2 шт</li>
+                            <li>Постановление об установлении опеки <br> в подлиннике и копии</li>
+                            <li>Паспорт здоровья ребенка</li>
+                            <li>Подлинник и копии документов для соц.уязвимых</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer-component></footer-component>
     <scroll-component></scroll-component>
