started admission page

--- a/pages/enrollee/requisites.html
+++ b/pages/enrollee/requisites.html
@@ -34,7 +34,7 @@
                     ЧУ «Политехнический колледж Корпорации «Казахмыс»
                 </div>
             </div>
-            <div class="flex wrap">
+            <div class="flex start requisites-wrapper">
                 <div class="requisit-card">
                     <div class="flex column start">
                         <div class="flex info">
@@ -64,20 +64,22 @@
                                 100300, г. Балхаш, ул. Абая 36
                             </a>
                         </div>
-                        <div class="flex spb">
-                            <div class="flex info">
+                        <div class="flex spb wrap">
+                            <div class="flex info no-mb">
                                 <img src="/assests/icons/phone-cyan.svg" alt="">
                                 <a href="tel:+77103668407">+7 (710) 366-84-07</a>
                             </div>
-                            <div class="flex info">
+                            <div class="flex info no-mb">
                                 <img src="/assests//icons/printer.svg" alt="">
-                                <span>Факс: </span>
+                                <span>Факс:</span>
                                 <a href="tel:+77103647552">+7 (710) 364-75-52</a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <img src="/assests/images/enrollee/logo-png-big.png" alt="" class="logo-big dn690">
             </div>
+            <img src="/assests/images/enrollee/college-photo.jpg" alt="" class="college-photo">
         </div>
     </main>
     <footer-component></footer-component>
