--- a/pages/enrollee/document.html
+++ b/pages/enrollee/document.html
@@ -25,7 +25,7 @@
         <div class="title">Перечень документов для поступления</div>
         <div class="breadcrumb">
             <a href="/">Главная</a>
-            <a href="/pages/enrolee/index.html">Абитуриенту</a>
+            <a href="/pages/enrollee/index.html">Абитуриенту</a>
             <span>Перечень документов для поступления</span>
         </div>
         <div class="document-list-global-wrapper">
