--- a/pages/enrollee/requisites.html
+++ b/pages/enrollee/requisites.html
@@ -25,7 +25,7 @@
         <div class="title">Реквизиты колледжа</div>
         <div class="breadcrumb">
             <a href="/">Главная</a>
-            <a href="/pages/enrolee/index.html">Абитуриенту</a>
+            <a href="/pages/enrollee/index.html">Абитуриенту</a>
             <span>Реквизиты колледжа</span>
         </div>
         <div class="mY60">
