almost student section done

--- a/pages/student/schedule.html
+++ b/pages/student/schedule.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -10,25 +10,27 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assests/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
 
-    <title></title>
+    <title>График учебного процесса</title>
 
     <script src="/js/header.js"></script>
     <script src="/js/footer.js"></script>
     <script src="/js/goUp.js"></script>
     <!-- <script src="/js/link.js"></script> -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/student.css">
 </head>
 
 <body>
     <header-component></header-component>
-    <main class="responsive">
-        <div class="title"></div>
+    <main class="container responsive">
+        <div class="title">График учебного процесса</div>
         <div class="breadcrumb">
             <a href="/">Главная</a>
-            <a href="/pages/"></a>
-            <span></span>
+            <a href="/pages/student/index.html">Студенту</a>
+            <span>График учебного процесса</span>
         </div>
-
+        <div class="mY60">
+          <img src="/assests/images/student/schedule.jpg" alt="" class="general">  
+        </div>
     </main>
     <footer-component></footer-component>
     <scroll-component></scroll-component>
