--- a/pages/student/parlament.html
+++ b/pages/student/parlament.html
@@ -30,18 +30,20 @@
                 <span>Студенческий парламент колледжа</span>
             </div>
         </div>
-        <div class="position flex start wrap">
-            <div class="fs-500 fw-medium">
-                Положение о деятельности студенческого парламента
-            </div>
-            <div class="file-card">
-                <span class="file-card-title">
-                    Положение
-                </span>
-                <div class="flex spb file-card-link">
-                    <img src="/assests/icons/file.svg" alt="File icon">
-                    <link-component href="/assests/docs/РУС/РУС Антикоррупционный стандарт .pdf"
-                        text="Посмотреть материал" class="yellow blank"></link-component>
+        <div class="container">
+            <div class="position flex start wrap">
+                <div class="fs-500 fw-medium">
+                    Положение о деятельности студенческого парламента
+                </div>
+                <div class="file-card">
+                    <span class="file-card-title">
+                        Положение
+                    </span>
+                    <div class="flex spb file-card-link">
+                        <img src="/assests/icons/file.svg" alt="File icon">
+                        <link-component href="/assests/docs/РУС/РУС Антикоррупционный стандарт .pdf"
+                            text="Посмотреть материал" class="yellow blank"></link-component>
+                    </div>
                 </div>
             </div>
         </div>
@@ -50,6 +52,37 @@
                 <div class="flex spb">
                     <div class="block-title">
                         Президент студенческого парламента
+                    </div>
+                </div>
+
+                <div class="flex main-part wrap">
+                    <img src="/assests/images/student/president.jpg" alt="">
+                    <div class="text">
+                        <p>«Сегодняшняя задача молодежи – учеба, наука и воспитательная работа. Сегодня время, когда молодежь переходит от слов к делу. Без воспитания порядка нет. Поэтому общее внимание молодежи должно быть сосредоточено на образовании» - сказал Гани Муратбаев.
+
+                        <br> <br>
+
+                        В связи с чем, как президент студенческого парламента:
+                        -Я представляю себе молодых людей, твердо стоящих на ногах в будущем, умеющих всесторонне развивать себя, имеющих светлое будущее, трудолюбивых, способных найти свое место в жизни. Ведь в любое время движущей силой общества является молодежь. Поэтому молодые люди должны уметь выдержать все испытания. Я, как молодой специалист, буду трудиться за будущее своей страны. Благодаря выбранной профессии я многое узнаю и ищу. Уверен, что в дальнейшем 
+                        я и казахская молодежь станем поколением, покорившим высокие вершины.</p>
+                    </div>
+                </div>
+                <div class="flex column start g20">
+                    <div>
+                        <div class="clr-primary fw-medium fs-200">
+                            Махабаев Ерсұлтан
+                        </div>
+                        <span>
+                            студент группы МЦМ-20-09
+                        </span>
+                    </div>
+                    <div>
+                        <span>
+                            телефон: <a href="tel:+77778939500" class="underline-hover">+7 (777) 893-95-00</a>
+                        </span> <br>
+                        <span>
+                            email: <a href="mailto:emahabaev765@gmail.com" class="underline-hover">emahabaev765@gmail.com</a>
+                        </span>
                     </div>
                 </div>
             </div>
