--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header-component></header-component>
+    <header-component class="transparent"></header-component>
     <main>
         <div class="hero g40">
             <div class="fs-700">
@@ -37,6 +37,7 @@
                     </svg>
                 </button>
             </a>
+            <video src="/assests/main-video.mp4" autoplay></video>
         </div>
         <div class="quickActions flex wrap g20">
             <a href="#" class="action">
