--- a/pages/about/antikor.html
+++ b/pages/about/antikor.html
@@ -117,7 +117,7 @@
     </div>
     <div class="club-wrapper">
       <div class="club container">
-        <div class="flex spb">
+        <div class="flex spb heading">
           <div class="block-title">Sanaly Urpaq</div>
           <div class="primary2">Студенческий клуб</div>
         </div>
