--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -145,7 +145,7 @@
     </div>
     <div class="container">
       <div class="structure">
-        <div class="flex spb">
+        <div class="flex spb heading">
           <div class="block-title">
             Структура управления колледжа
           </div>
