--- a/pages/enrollee/admission.html
+++ b/pages/enrollee/admission.html
@@ -54,7 +54,7 @@
     </div>
     <div class="mY60 documents-margin">
       <div class="container">
-        <div class="flex spb">
+        <div class="flex spb heading">
           <div class="block-title">
             Как можно подать документы
           </div>
