--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="flex start">
                 <div class="block-title">Наши партнеры</div>
             </div>
-            <div class="flex spb wrap partners-block-wrapper">
+            <div class="flex wrap partners-block-wrapper">
                 <a href="http://www.kazakhmys.kz/" target="_blank" class="partners-block">
                     <img src="/assests/images/partners/kazakhmys.png" alt="Kazakhmys">
                 </a>
@@ -165,6 +165,8 @@
                     class="partners-block">
                     <img src="/assests/images/partners/kmm.png" alt="Kazakhmys">
                 </a>
+                <a href="" class="empty partners-block dn1084"></a>
+                <a href="" class="empty partners-block dn904"></a>
             </div>
         </div>
         <div class="container textInTheEnd">
